# vrearth

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  deny.toml  docker-compose.yml  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
crates/vrearth-core/: Cargo.toml
crates/vrearth-core/src/: invite.rs  lib.rs  player.rs  position.rs  room_object.rs  types.rs  whiteboard.rs  ws_message.rs
crates/vrearth-server/: Cargo.toml
crates/vrearth-server/migrations/: 0001_initial.sql  0002_room_objects.sql  0003_room_sessions.sql
crates/vrearth-server/src/: app.rs  db.rs  invite.rs  main.rs  objects.rs  room.rs  sessions.rs  state.rs  ws.rs
crates/vrearth-server/src/handlers/: mod.rs  room.rs
crates/vrearth-wasm/: Cargo.toml
crates/vrearth-wasm/src/: lib.rs
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  main.tsx  types.ts
frontend/src/components/: ChatPanel.tsx  LayoutPanel.tsx  MemoriesPanel.tsx  PlayerPanel.tsx  WhiteboardPanel.tsx  YoutubePanel.tsx
frontend/src/components/__tests__/: ChatPanel.test.tsx
frontend/src/scenes/: RoomScene.tsx  movement.ts
frontend/src/scenes/__tests__/: movement.test.ts
frontend/src/stores/: chatStore.ts  emoteStore.ts  memoriesStore.ts  objectStore.ts  roomStore.ts  whiteboardStore.ts  youtubeStore.ts
frontend/src/stores/__tests__/: chatStore.test.ts  roomStore.test.ts
frontend/src/webrtc/: rtcManager.test.ts  rtcManager.ts  wsClient.test-utils.ts  wsClient.ts
frontend/src/webrtc/__tests__/: wsClient.test.ts
