[workspace]
resolver = "2"
members = [
    "crates/vrearth-server",
    "crates/vrearth-core",
    "crates/vrearth-wasm",
]

[workspace.package]
version     = "0.1.0"
edition     = "2021"
authors     = ["sotanengel"]
license     = "Apache-2.0"
repository  = "https://github.com/sotanengel/vrearth"

[workspace.dependencies]
tokio            = { version = "1",   features = ["full"] }
axum             = { version = "0.8", features = ["ws", "macros"] }
sqlx             = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate"] }
serde            = { version = "1",   features = ["derive"] }
serde_json       = "1"
jsonwebtoken     = "9"
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid             = { version = "1",   features = ["v4", "serde"] }
thiserror        = "2"
anyhow           = "1"
wasm-bindgen     = "0.2"
rand             = "0.8"
tower-http       = { version = "0.6", features = ["fs", "cors"] }
futures-util     = "0.3"
