[package]
name    = "vrearth-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "vrearth-server"
path = "src/main.rs"

[dependencies]
vrearth-core       = { path = "../vrearth-core" }
tokio              = { workspace = true }
axum               = { workspace = true }
sqlx               = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
jsonwebtoken       = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
uuid               = { workspace = true }
thiserror          = { workspace = true }
anyhow             = { workspace = true }
rand               = { workspace = true }
tower-http         = { workspace = true }

futures-util = "0.3"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
