[package]
name    = "vrearth-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
vrearth-core = { path = "../vrearth-core" }
wasm-bindgen = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
